--- a/index.html
+++ b/index.html
@@ -15,21 +15,20 @@
 <body>
     <header>
         <div class="container mt4">
-            <a href="https://icguanyu.github.io/sweetaste/index.html"><img src="./student-week1/logo-all-dark.svg"
+            <a href="#"><img src="./student-week1/logo-all-dark.svg"
                     style='width: 220px;height: 40px;' alt="logo"></a>
             <ul class='banner ml4'>
-                <a href="https://icguanyu.github.io/sweetaste/index.html">
+                <a href="#">
                     <li>首頁</li>
                 </a>
-                <a href="https://icguanyu.github.io/sweetaste/product.html">
+                <a href="#">
                     <li>甜點</li>
                 </a>
-                <a href="https://icguanyu.github.io/sweetaste/login.html">
+                <a href="#">
                     <li>登入</li>
                 </a>
-                <a href="https://icguanyu.github.io/sweetaste/cart.html"><img src="./student-week1/shopping_cart.png"
+                <a href="#"><img src="./student-week1/shopping_cart.png"
                         alt="shopping cart" style="width: 24px;height: 24px;padding: 10px;margin-left: 80px;"></a>
-
             </ul>
         </div>
         <img src="./student-week1/banner.png" alt="" class='mt5'>
