--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                     <i class='heart far fa-heart'></i>
                     <img src="./student-week1/p-1.png" alt="p1">
                     <div class="item-body">
-                        <h2>焦糖瑪卡龍</h2>
+                        <h2>繽紛摩摩喳喳</h2>
                         <span>NT$ 450</span>
                     </div>
                     <a href="" class='productList-card-cart'>加入購物車</a>
@@ -76,7 +76,7 @@
                     <i class='heart far fa-heart'></i>
                     <img src="./student-week1/p-2.png" alt="p1">
                     <div class="item-body">
-                        <h2>焦糖瑪卡龍</h2>
+                        <h2>糖霜兜那</h2>
                         <span>NT$ 450</span>
                     </div>
                     <a href="" class='productList-card-cart'>加入購物車</a>
@@ -86,7 +86,7 @@
                     <i class='heart far fa-heart'></i>
                     <img src="./student-week1/p-3.png" alt="p1">
                     <div class="item-body">
-                        <h2>焦糖瑪卡龍</h2>
+                        <h2>莓果派</h2>
                         <span>NT$ 450</span>
                     </div>
                     <a href="" class='productList-card-cart'>加入購物車</a>
@@ -96,7 +96,7 @@
                     <i class='heart far fa-heart'></i>
                     <img src="./student-week1/p-4.png" alt="p1">
                     <div class="item-body">
-                        <h2>焦糖瑪卡龍</h2>
+                        <h2>蘋果方派</h2>
                         <span>NT$ 450</span>
                     </div>
                     <a href="" class='productList-card-cart'>加入購物車</a>
@@ -106,7 +106,7 @@
                     <i class='heart far fa-heart'></i>
                     <img src="./student-week1/p-5.png" alt="p1">
                     <div class="item-body">
-                        <h2>焦糖瑪卡龍</h2>
+                        <h2>手工莓果胖蛋糕</h2>
                         <span>NT$ 450</span>
                     </div>
                     <a href="" class='productList-card-cart'>加入購物車</a>
@@ -116,7 +116,7 @@
                     <i class='heart far fa-heart'></i>
                     <img src="./student-week1/p-6.png" alt="p1">
                     <div class="item-body">
-                        <h2>焦糖瑪卡龍</h2>
+                        <h2>鮮摘草莓冰激林</h2>
                         <span>NT$ 450</span>
                     </div>
                     <a href="" class='productList-card-cart'>加入購物車</a>
